# blobsso

./: .gitmodules  CMakeLists.txt  CONTEXT.md  Makefile  README.md  extension_config.cmake
.forgejo/workflows/: build.yml
.github/workflows/: MainDistributionPipeline.yml
docs/: Disaggregated Lakehouse.md  blobsso Performance.md
src/: blobsso_extension.cpp
src/include/: blobsso_extension.hpp
test/: mock_sts_test.py
test/sql/: blobsso.test
